--- a/src/main/resources/templates/cars.html
+++ b/src/main/resources/templates/cars.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -15,6 +16,11 @@
 <div th:replace="trips :: navbar"></div>
 <div th:insert="trips :: header"></div>
 
+<div class="container p-2">
+    <a class="btn btn-success" sec:authorize="hasAnyAuthority('ROLE_DISPATCHER','ROLE_ADMIN')"
+       href="/registerCar" th:utext="#{registerCar}">Register new car</a>
+</div>
+
 <div th:unless="${cars == null}" class="container-xxl p-2 text-center">
     <div class="row row-cols-auto justify-content-md-center">
         <table class="table table-hover table-sm table-bordered border-info">
@@ -24,6 +30,8 @@
                 <th th:utext="#{number}">Number</th>
                 <th th:utext="#{mileage}">Mileage</th>
                 <th th:utext="#{idStatus}">Car status</th>
+                <th th:utext="#{edit}">Edit</th>
+                <th th:utext="#{delete}">Delete</th>
             </tr>
 
             <tr th:unless="${cars == null}" th:each="car : ${cars}" th:class="${carStat.even}?'even':'odd'">
@@ -32,6 +40,8 @@
                 <td align="center" th:text="${car.number}"></td>
                 <td align="center" th:text="${car.mileage}"></td>
                 <td align="center" th:text="${car.idStatus}"></td>
+                <td> <a th:href="@{/editCar/{id}(id=${car.id})}" th:utext="#{edit}">Edit</a></td>
+                <td> <a th:href="@{/carDelete/{id}(id=${car.id})}" th:utext="#{delete}">Delete</a></td>
             </tr>
         </table>
     </div>
