--- a/src/main/resources/templates/registerDispatcher.html
+++ b/src/main/resources/templates/registerDispatcher.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title>Title</title>
+    <title>Register dispatcher</title>
 </head>
 <body>
 
