--- a/src/main/resources/templates/editCar.html
+++ b/src/main/resources/templates/editCar.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Latest compiled JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-    <title th:utext="#{registerCar}">Register car</title>
+    <title th:utext="#{editCar}">Register car</title>
 </head>
 <body>
 
@@ -61,9 +61,11 @@
                 </div>
             </div>
         </div>
-        <div class="form-group mt-2 text-center">
-            <input type="submit" class="btn btn-primary" value="Register">
-        </div>
+    </div>
+    <div class="form-group mt-2 text-center">
+    <form type="submit" method="POST" >
+        <button class="btn btn-success" th:utext="#{editCar}">Edit car</button>
+    </form>
     </div>
 </form>
 
